Project

General

Profile

Actions

Bug #61540

open

kafka: when a connection is removed due to idleness it should not be considered as faulty

Added by Yuval Lifshitz 12 months ago. Updated 11 months ago.

Status:
Pending Backport
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
kafka, notifications backport_processed
Backport:
reef, quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when a connection was idle for 30 seconds, it is being removed. duringthe removal process (that may take several seconds), the connection could still be found.
and therefore if new messages are sent in this period, they will automatically return with an error.
however, this is not an error case or disconnected broker, and the new messages should be usign a new connection.


Related issues 2 (2 open0 closed)

Copied to rgw - Backport #61642: reef: kafka: when a connection is removed due to idleness it should not be considered as faultyIn ProgressYuval LifshitzActions
Copied to rgw - Backport #61643: quincy: kafka: when a connection is removed due to idleness it should not be considered as faultyNewYuval LifshitzActions
Actions #1

Updated by Yuval Lifshitz 12 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 51864
Actions #2

Updated by Yuval Lifshitz 11 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot 11 months ago

  • Copied to Backport #61642: reef: kafka: when a connection is removed due to idleness it should not be considered as faulty added
Actions #4

Updated by Backport Bot 11 months ago

  • Copied to Backport #61643: quincy: kafka: when a connection is removed due to idleness it should not be considered as faulty added
Actions #5

Updated by Backport Bot 11 months ago

  • Tags changed from kafka, notifications to kafka, notifications backport_processed
Actions

Also available in: Atom PDF