rgw/kafka: make sure that destroy is called after connection is removed

in addition. the dtor calls "destroy()", so there is no need to call
it explictly

Fixes: https://tracker.ceph.com/issues/61540

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>
(cherry picked from commit 60412d6ab19f2ae42bdfaeaae0ff23dc011176ff)

Conflicts:
	src/rgw/rgw_kafka.cc